// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 1`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 2`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 3`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 4`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 5`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 6`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 7`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 8`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 9`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 10`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 11`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 12`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 13`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 14`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 15`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 16`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 17`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 18`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 19`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 20`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 21`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 22`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 23`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 24`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 25`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 26`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 27`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 28`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 29`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 30`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 31`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 32`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 33`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 34`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 35`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 36`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 37`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 38`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 39`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 40`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 41`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 42`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 43`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 44`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 45`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match modern framework semantic tokens 46`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 1`] = `"#1d1b30"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 2`] = `"#acc1e5"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 3`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 4`] = `"#17152b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 5`] = `"#191829"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 6`] = `"#141325"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 7`] = `"#141325"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 8`] = `"#141325"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 9`] = `"#51437f"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 10`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 11`] = `"#17152b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 12`] = `"#18162b"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 13`] = `"#18162c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 14`] = `"#acc1e5"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 15`] = `"#f31f77"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 16`] = `"#79d68c"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 17`] = `"#e6d466"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 18`] = `"#66a9ff"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 19`] = `"#af92ff"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 20`] = `"#5fdcf2"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 21`] = `"#a8bee4"`;

exports[`Snapshot Tests - Generated Theme > should match specific UI color sections 22`] = `"#f31f77"`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 1`] = `
{
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 2`] = `
{
  "fontStyle": "bold",
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 3`] = `
{
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 4`] = `
{
  "fontStyle": "bold",
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 5`] = `
{
  "foreground": "#acc1e5",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 6`] = `
{
  "fontStyle": "italic",
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 7`] = `
{
  "foreground": "#4dd8f0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 8`] = `
{
  "fontStyle": "italic",
  "foreground": "#4dd8f0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 9`] = `
{
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 10`] = `
{
  "fontStyle": "italic",
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 11`] = `
{
  "fontStyle": "bold",
  "foreground": "#af92ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 12`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 13`] = `
{
  "fontStyle": "bold",
  "foreground": "#e6d466",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 14`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 15`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 16`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 17`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 18`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 19`] = `
{
  "foreground": "#79d68c",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 20`] = `
{
  "foreground": "#ce7a2b",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 21`] = `
{
  "foreground": "#f31f77",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 22`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 23`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 24`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 25`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 26`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 27`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 28`] = `
{
  "fontStyle": "italic",
  "foreground": "#66a9ff",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 29`] = `
{
  "fontStyle": "italic",
  "foreground": "#4dd8f0",
}
`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 30`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 31`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 32`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 33`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 34`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 35`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific semantic token color sections 36`] = `undefined`;

exports[`Snapshot Tests - Generated Theme > should match specific token color sections 1`] = `
[
  {
    "name": "Comment",
    "scope": [
      "comment",
      "punctuation.definition.comment",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#939bc4",
    },
  },
  {
    "name": "Number, Boolean, Undefined, Null",
    "scope": [
      "constant.numeric",
      "constant.language",
      "variable.other.constant",
    ],
    "settings": {
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "String, Symbols",
    "scope": [
      "string",
      "constant.other.symbol",
      "constant.other.key",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Colors",
    "scope": [
      "constant.other.color",
    ],
    "settings": {
      "foreground": "#acc1e5",
    },
  },
  {
    "name": "Invalid",
    "scope": [
      "invalid",
    ],
    "settings": {
      "foreground": "#f31f77",
    },
  },
  {
    "name": "Storage Type",
    "scope": "storage.type",
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Storage - modifier, var, const, let",
    "scope": [
      "storage.modifier",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Interpolation, PHP tags",
    "scope": [
      "punctuation.definition.template-expression",
      "punctuation.section.embedded",
    ],
    "settings": {
      "foreground": "#75b2ff",
    },
  },
  {
    "name": "Operators",
    "scope": [
      "keyword.operator",
    ],
    "settings": {
      "foreground": "#f31f77",
    },
  },
  {
    "name": "Punctuation",
    "scope": [
      "punctuation",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Template & Misc",
    "scope": [
      "keyword.other",
      "punctuation.definition.keyword",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Import, Export, From, Default",
    "scope": [
      "keyword.control.import",
      "keyword.control.export",
      "keyword.control.default",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Keyword",
    "scope": [
      "keyword",
      "keyword.control",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Keyword Operator Logical",
    "scope": [
      "keyword.operator.logical",
      "keyword.operator.bitwise",
      "keyword.operator.comparison",
      "keyword.operator.relational",
    ],
    "settings": {
      "foreground": "#f31f77",
    },
  },
  {
    "name": "Tag",
    "scope": "entity.name.tag",
    "settings": {
      "foreground": "#d48ae0",
    },
  },
  {
    "name": "Tag Punctuation",
    "scope": [
      "punctuation.definition.tag",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Variables",
    "scope": [
      "variable",
      "support.variable",
    ],
    "settings": {
      "foreground": "#acc1e5",
    },
  },
  {
    "name": "Function Arguments",
    "scope": [
      "variable.parameter",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Object Key",
    "scope": [
      "meta.object-literal.key",
      "entity.name.type.hcl",
    ],
    "settings": {
      "foreground": "#7a7aff",
    },
  },
  {
    "name": "Object Property",
    "scope": [
      "variable.other.property",
      "support.variable.property",
    ],
    "settings": {
      "foreground": "#4dd8f0",
    },
  },
  {
    "name": "Methods",
    "scope": [
      "entity.name.method",
      "variable.function.constructor",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Function Definition",
    "scope": [
      "entity.name.function",
      "variable.function",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Constant, Tag Attribute",
    "scope": [
      "constant.character",
      "constant.escape",
    ],
    "settings": {
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Inherited Class",
    "scope": "entity.other.inherited-class",
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "Class, Support, DOM, etc",
    "scope": [
      "support.class",
      "support.type",
      "support.function",
    ],
    "settings": {
      "foreground": "#e6d466",
    },
  },
  {
    "name": "Class Name",
    "scope": "entity.name",
    "settings": {
      "foreground": "#e6d466",
    },
  },
  {
    "name": "CSS Property Name",
    "scope": [
      "support.type.property-name",
    ],
    "settings": {
      "foreground": "#4dd8f0",
    },
  },
  {
    "name": "CSS Tag",
    "scope": [
      "entity.name.tag.css",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "CSS ID",
    "scope": [
      "entity.other.attribute-name.id",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "CSS Class",
    "scope": [
      "entity.other.attribute-name.class",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "CSS Unit",
    "scope": [
      "keyword.other.unit",
    ],
    "settings": {
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Markup Bold",
    "scope": [
      "markup.bold",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Markup Italic",
    "scope": [
      "markup.italic",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#10b981",
    },
  },
  {
    "name": "Markup Underline",
    "scope": [
      "markup.underline",
    ],
    "settings": {
      "fontStyle": "underline",
    },
  },
  {
    "name": "Markup Heading",
    "scope": [
      "markup.heading",
      "entity.name.section",
      "markup.heading.setext",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markup Quote",
    "scope": [
      "markup.quote",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markup List",
    "scope": [
      "markup.list",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Markup Link",
    "scope": [
      "markup.underline.link",
      "string.other.link",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markdown Heading",
    "scope": [
      "markup.heading.markdown",
      "markup.heading.setext.markdown",
      "entity.name.section.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markdown Link",
    "scope": [
      "string.other.link.title.markdown",
      "string.other.link.description.markdown",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markdown Code",
    "scope": [
      "markup.inline.raw.markdown",
      "markup.fenced_code.block.markdown",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markdown Bold",
    "scope": [
      "markup.bold.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Markdown Italic",
    "scope": [
      "markup.italic.markdown",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#a686ff",
    },
  },
  {
    "name": "JSX Component",
    "scope": [
      "support.class.component",
    ],
    "settings": {
      "foreground": "#e1c25a",
    },
  },
  {
    "name": "JSX Tag",
    "scope": [
      "entity.name.tag.tsx",
      "entity.name.tag.jsx",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "TypeScript Type",
    "scope": [
      "entity.name.type.ts",
      "entity.name.type.tsx",
    ],
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "TypeScript Interface",
    "scope": [
      "entity.name.type.interface",
    ],
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "GraphQL Field",
    "scope": [
      "variable.graphql",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "JSON Key",
    "scope": [
      "support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "YAML Key",
    "scope": [
      "entity.name.tag.yaml",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
]
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme colors snapshot 1`] = `
{
  "activityBar.activeBackground": "#1b1a2c",
  "activityBar.activeBorder": "#66a9ff",
  "activityBar.background": "#141325",
  "activityBar.border": "#191829",
  "activityBar.foreground": "#a0b5d9",
  "activityBar.inactiveForeground": "#515b6f",
  "activityBarBadge.background": "#007acc",
  "activityBarBadge.foreground": "#ffffff",
  "activityBarTop.foreground": "#a8bee4",
  "activityBarTop.inactiveForeground": "#a0b5d9",
  "badge.background": "#007acc",
  "badge.foreground": "#ffffff",
  "breadcrumb.activeSelectionForeground": "#a686ff",
  "breadcrumb.background": "#18162c",
  "breadcrumb.focusForeground": "#acc1e5",
  "breadcrumb.foreground": "#a0b5d9",
  "breadcrumbPicker.background": "#18162b",
  "button.background": "#5790d9",
  "button.foreground": "#000000",
  "button.hoverBackground": "#5c98e4",
  "button.secondaryBackground": "#3e5182",
  "charts.blue": "#66a9ff",
  "charts.foreground": "#acc1e5",
  "charts.green": "#66a9ff",
  "charts.lines": "#18162c",
  "charts.orange": "#ce7a2b",
  "charts.purple": "#8d72d9",
  "charts.red": "#f31f77",
  "charts.yellow": "#e6d466",
  "chat.avatarBackground": "#5790d9",
  "chat.avatarForeground": "#acc1e5",
  "chat.requestBorder": "#2f2d41",
  "chat.slashCommandBackground": "#141325",
  "chat.slashCommandForeground": "#66a9ff",
  "checkbox.background": "#18162c",
  "checkbox.border": "#283356",
  "checkbox.foreground": "#acc1e5",
  "debugConsole.errorForeground": "#cf1a65",
  "debugConsole.infoForeground": "#a8bee4",
  "debugConsole.sourceForeground": "#a8bee4",
  "debugConsole.warningForeground": "#c4b457",
  "debugConsoleInputIcon.foreground": "#4de0d8",
  "debugExceptionWidget.background": "#141325",
  "debugExceptionWidget.border": "#cf1a65",
  "debugIcon.breakpointDisabledForeground": "#2f2d41",
  "debugIcon.breakpointForeground": "#cf1a65",
  "debugIcon.breakpointUnverifiedForeground": "#cf1a65",
  "debugTokenExpression.boolean": "#ce7a2b",
  "debugTokenExpression.error": "#cf1a65",
  "debugTokenExpression.name": "#5fdcf2",
  "debugTokenExpression.number": "#ce7a2b",
  "debugTokenExpression.string": "#79d68c",
  "debugTokenExpression.value": "#acc1e5",
  "debugToolBar.background": "#141325",
  "debugView.stateLabelBackground": "#141325",
  "debugView.stateLabelForeground": "#a8bee4",
  "debugView.valueChangedHighlight": "#5790d9ab",
  "descriptionForeground": "#a8bee4",
  "diffEditor.diagonalFill": "#2a293d",
  "diffEditor.insertedLineBackground": "#67b67720",
  "diffEditor.insertedTextBackground": "#67b67720",
  "diffEditor.removedLineBackground": "#cf1a6521",
  "diffEditor.removedTextBackground": "#cf1a6521",
  "diffEditor.unchangedCodeBackground": "#26243966",
  "diffEditorGutter.insertedLineBackground": "#67b67726",
  "diffEditorGutter.removedLineBackground": "#cf1a6521",
  "diffEditorOverview.insertedForeground": "#67b67726",
  "diffEditorOverview.removedForeground": "#cf1a6521",
  "disabledForeground": "#939bc4",
  "dropdown.background": "#18162c",
  "dropdown.foreground": "#a8bee4",
  "dropdown.listBackground": "#18162c",
  "editor.background": "#1d1b30",
  "editor.findMatchBackground": "#5790d933",
  "editor.findMatchBorder": "#e6d46680",
  "editor.findMatchHighlightBackground": "#5790d933",
  "editor.findRangeHighlightBackground": "#66a9ff33",
  "editor.focusedStackFrameHighlightBackground": "#4de0d820",
  "editor.foldBackground": "#14132533",
  "editor.foreground": "#acc1e5",
  "editor.inactiveSelectionBackground": "#66a9ff26",
  "editor.lineHighlightBackground": "#2f2d41",
  "editor.rangeHighlightBackground": "#4de0d833",
  "editor.selectionBackground": "#66a9ff33",
  "editor.selectionHighlightBackground": "#66a9ff40",
  "editor.stackFrameHighlightBackground": "#c4b45720",
  "editor.wordHighlightBackground": "#66a9ff40",
  "editor.wordHighlightStrongBackground": "#66a9ff4d",
  "editorBracketHighlight.foreground1": "#d38740",
  "editorBracketHighlight.foreground2": "#d896e3",
  "editorBracketHighlight.foreground3": "#f43585",
  "editorBracketHighlight.foreground4": "#e9d875",
  "editorBracketHighlight.foreground5": "#d896e3",
  "editorBracketHighlight.foreground6": "#99cc40",
  "editorBracketHighlight.unexpectedBracket.foreground": "#f31f77",
  "editorBracketMatch.background": "#18162c",
  "editorBracketMatch.border": "#1d1b30",
  "editorBracketPairGuide.activeBackground1": "#d38740",
  "editorBracketPairGuide.activeBackground2": "#d896e3",
  "editorBracketPairGuide.activeBackground3": "#f43585",
  "editorBracketPairGuide.activeBackground4": "#e9d875",
  "editorBracketPairGuide.activeBackground5": "#d896e3",
  "editorBracketPairGuide.activeBackground6": "#99cc40",
  "editorCodeLens.foreground": "#a0b5d9",
  "editorCursor.foreground": "#acc1e5",
  "editorError.foreground": "#f31f77",
  "editorGhostText.foreground": "#7d84a7",
  "editorGroup.border": "#333145",
  "editorGroup.dropBackground": "#333145",
  "editorGroupHeader.border": "#1d1b30",
  "editorGroupHeader.noTabsBackground": "#18162c",
  "editorGroupHeader.tabsBackground": "#18162c",
  "editorGroupHeader.tabsBorder": "#141325",
  "editorGutter.addedBackground": "#233e4e",
  "editorGutter.deletedBackground": "#5a1943",
  "editorGutter.modifiedBackground": "#434561",
  "editorHint.foreground": "#4dd8f0",
  "editorHoverWidget.background": "#32334b",
  "editorHoverWidget.border": "#2c3b61",
  "editorIndentGuide.activeBackground1": "#363751",
  "editorIndentGuide.background1": "#242237",
  "editorInfo.foreground": "#4dd8f0",
  "editorInlayHint.foreground": "#939bc4",
  "editorLightBulb.foreground": "#e6d466",
  "editorLightBulbAutoFix.foreground": "#e6d466",
  "editorLineNumber.activeForeground": "#787ea1",
  "editorLineNumber.foreground": "#3b3d57",
  "editorLink.activeForeground": "#acc1e5",
  "editorMarkerNavigation.background": "#18162c",
  "editorOverviewRuler.addedForeground": "#233e4e",
  "editorOverviewRuler.border": "#333145",
  "editorOverviewRuler.bracketMatchForeground": "#141325",
  "editorOverviewRuler.deletedForeground": "#5a1943",
  "editorOverviewRuler.errorForeground": "#f31f77",
  "editorOverviewRuler.findMatchForeground": "#9ea5ca66",
  "editorOverviewRuler.infoForeground": "#5addc1",
  "editorOverviewRuler.modifiedForeground": "#434561",
  "editorOverviewRuler.rangeHighlightForeground": "#4de0d84d",
  "editorOverviewRuler.selectionHighlightForeground": "#66a9ff40",
  "editorOverviewRuler.warningForeground": "#e6d466",
  "editorOverviewRuler.wordHighlightForeground": "#66a9ff59",
  "editorOverviewRuler.wordHighlightStrongForeground": "#66a9ff73",
  "editorPane.background": "#2f2d41",
  "editorRuler.foreground": "#141325",
  "editorStickyScrollHover.background": "#66a9ff1a",
  "editorSuggestWidget.background": "#141325",
  "editorSuggestWidget.border": "#283356",
  "editorSuggestWidget.highlightForeground": "#9ea5ca",
  "editorSuggestWidget.selectedBackground": "#66a9ff4d",
  "editorWarning.foreground": "#e6d466",
  "editorWhitespace.foreground": "#1485d0",
  "editorWidget.background": "#27273e",
  "editorWidget.border": "#283356",
  "editorWidget.foreground": "#acc1e5",
  "editorWidget.resizeBorder": "#283356",
  "errorForeground": "#a0b5d9",
  "extensionBadge.remoteBackground": "#5790d9",
  "extensionBadge.remoteForeground": "#000000",
  "extensionButton.prominentBackground": "#5790d9",
  "extensionButton.prominentForeground": "#000000",
  "extensionButton.prominentHoverBackground": "#5c98e4",
  "focusBorder": "#007acc4d",
  "foreground": "#acc1e5",
  "gitDecoration.addedResourceForeground": "#41beb8",
  "gitDecoration.conflictingResourceForeground": "#e6d466cc",
  "gitDecoration.deletedResourceForeground": "#cf1a65",
  "gitDecoration.ignoredResourceForeground": "#a0b5d9",
  "gitDecoration.modifiedResourceForeground": "#75b2ff",
  "gitDecoration.renamedResourceForeground": "#41beb8",
  "gitDecoration.stageDeletedResourceForeground": "#cf1a65",
  "gitDecoration.stageModifiedResourceForeground": "#75b2ff",
  "gitDecoration.untrackedResourceForeground": "#41beb8",
  "gitlens.gutterBackgroundColor": "#18162c",
  "gitlens.gutterForegroundColor": "#a8bee4",
  "gitlens.gutterUncommittedForegroundColor": "#66a9ff",
  "gitlens.trailingLineForegroundColor": "#7d84a7",
  "icon.foreground": "#acc1e5",
  "inlineChat.foreground": "#acc1e5",
  "inlineChatDiff.inserted": "#67b67740",
  "inlineChatDiff.removed": "#cf1a6542",
  "inlineChatInput.background": "#2f2d41",
  "input.background": "#141325",
  "input.border": "#283356",
  "input.foreground": "#acc1e5",
  "input.placeholderForeground": "#a8bee48a",
  "inputOption.activeBackground": "#7d84a745",
  "inputOption.activeForeground": "#acc1e5",
  "list.activeSelectionBackground": "#66a9ff33",
  "list.activeSelectionForeground": "#acc1e5",
  "list.deemphasizedForeground": "#a8bee4",
  "list.dropBackground": "#2f2d41",
  "list.errorForeground": "#f31f77",
  "list.focusBackground": "#66a9ff40",
  "list.focusForeground": "#acc1e5",
  "list.highlightForeground": "#acc1e5",
  "list.hoverBackground": "#66a9ff1a",
  "list.hoverForeground": "#acc1e5",
  "list.inactiveSelectionBackground": "#66a9ff26",
  "list.inactiveSelectionForeground": "#acc1e5",
  "list.invalidItemForeground": "#d5953d",
  "list.warningForeground": "#c4b457",
  "listFilterWidget.background": "#141325",
  "listFilterWidget.noMatchesOutline": "#cf1a65",
  "listFilterWidget.outline": "#5790d9",
  "menu.background": "#18162c",
  "menu.border": "#283356",
  "menu.foreground": "#a8bee4",
  "menu.selectionBackground": "#66a9ff40",
  "menu.selectionForeground": "#cddaef",
  "menu.separatorBackground": "#262439",
  "menubar.selectionBackground": "#66a9ff33",
  "menubar.selectionBorder": "#211f34",
  "menubar.selectionForeground": "#acc1e5",
  "merge.currentContentBackground": "#41beb845",
  "merge.currentHeaderBackground": "#67b67726",
  "merge.incomingContentBackground": "#5790d945",
  "merge.incomingHeaderBackground": "#5790d9ab",
  "mergeEditor.change.background": "#67b67726",
  "mergeEditor.change.word.background": "#67b67740",
  "mergeEditor.conflict.handled.minimapOverViewRuler": "#41beb8",
  "mergeEditor.conflict.handledFocused.border": "#67b67766",
  "mergeEditor.conflict.handledUnfocused.border": "#67b67726",
  "mergeEditor.conflict.unhandled.minimapOverViewRuler": "#e6d466",
  "mergeEditor.conflict.unhandledFocused.border": "#e6d466b0",
  "mergeEditor.conflict.unhandledUnfocused.border": "#e6d46687",
  "minimapGutter.addedBackground": "#254957",
  "minimapGutter.deletedBackground": "#701a4a",
  "minimapGutter.modifiedBackground": "#494b69",
  "multiDiffEditor.border": "#2f2d41",
  "multiDiffEditor.headerBackground": "#2f2d41",
  "notebook.cellBorderColor": "#141325",
  "notebook.cellEditorBackground": "#18162c",
  "notebook.cellStatusBarItemHoverBackground": "#66a9ff26",
  "notebook.editorBackground": "#2f2d41",
  "notebook.focusedCellBorder": "#283356",
  "notificationCenterHeader.background": "#18162c",
  "notificationLink.foreground": "#75b2ff",
  "notifications.background": "#18162c",
  "notificationsErrorIcon.foreground": "#cf1a65",
  "notificationsInfoIcon.foreground": "#4dd8f0",
  "notificationsWarningIcon.foreground": "#e6d466",
  "panel.background": "#18162b",
  "panel.border": "#283356",
  "panelInput.border": "#1d1b30",
  "panelStickyScroll.background": "#2f2d41",
  "panelTitle.activeBorder": "#66a9ff",
  "panelTitle.activeForeground": "#a0b5d9",
  "panelTitle.inactiveForeground": "#8091ae",
  "peekView.border": "#283356",
  "peekViewEditor.background": "#18162c",
  "peekViewEditor.matchHighlightBackground": "#9ea5ca66",
  "peekViewResult.background": "#18162c",
  "peekViewResult.fileForeground": "#a8bee4",
  "peekViewResult.lineForeground": "#acc1e5",
  "peekViewResult.matchHighlightBackground": "#9ea5ca66",
  "peekViewResult.selectionBackground": "#66a9ff4d",
  "peekViewResult.selectionForeground": "#acc1e5",
  "peekViewTitle.background": "#141325",
  "peekViewTitleDescription.foreground": "#a8bee4",
  "peekViewTitleLabel.foreground": "#acc1e5",
  "pickerGroup.border": "#283356",
  "pickerGroup.foreground": "#acc1e5",
  "progressBar.background": "#5790d9",
  "quickInput.background": "#18162c",
  "sash.hoverBorder": "#333145",
  "scmGraph.foreground1": "#66a9ff",
  "scmGraph.foreground2": "#a686ff",
  "scmGraph.foreground3": "#4dd8f0",
  "scmGraph.foreground4": "#d48ae0",
  "scmGraph.foreground5": "#d48ae0",
  "scmGraph.historyItemBaseRefColor": "#4dd8f0",
  "scmGraph.historyItemHoverAdditionsForeground": "#67b677",
  "scmGraph.historyItemHoverDefaultLabelForeground": "#acc1e5",
  "scmGraph.historyItemHoverDeletionsForeground": "#f31f77",
  "scmGraph.historyItemHoverLabelForeground": "#141325",
  "scmGraph.historyItemRefColor": "#66a9ff",
  "scmGraph.historyItemRemoteRefColor": "#a686ff",
  "scrollbar.shadow": "#00000033",
  "scrollbarSlider.activeBackground": "#66a9ff4d",
  "scrollbarSlider.background": "#a8bee40a",
  "scrollbarSlider.hoverBackground": "#66a9ff33",
  "selection.background": "#66a9ff33",
  "settings.headerForeground": "#9ea5ca",
  "sideBar.background": "#191829",
  "sideBar.border": "#1d1c2e",
  "sideBar.dropBackground": "#2f2d41",
  "sideBar.foreground": "#a8bee4",
  "sideBarSectionHeader.background": "#1d1c2e",
  "sideBarSectionHeader.border": "#222132",
  "sideBarSectionHeader.foreground": "#a0b5d9",
  "sideBarTitle.foreground": "#a0b5d9",
  "statusBar.background": "#141325",
  "statusBar.border": "#191829",
  "statusBar.debuggingBackground": "#51437f",
  "statusBar.debuggingForeground": "#a0b5d9",
  "statusBar.focusBorder": "#66a9ff",
  "statusBar.foreground": "#a0b5d9",
  "statusBar.noFolderBackground": "#141325",
  "statusBarItem.activeBackground": "#66a9ff40",
  "statusBarItem.focusBorder": "#66a9ff",
  "statusBarItem.hoverBackground": "#66a9ff26",
  "statusBarItem.prominentBackground": "#66a9ff40",
  "statusBarItem.prominentHoverBackground": "#66a9ff4d",
  "statusBarItem.remoteBackground": "#66a9ff40",
  "statusBarItem.remoteHoverForeground": "#b9cbe9",
  "tab.activeBackground": "#18162c",
  "tab.activeBorderTop": "#a686ff",
  "tab.activeForeground": "#acc1e5",
  "tab.activeModifiedBorder": "#a686ff",
  "tab.border": "#333145",
  "tab.hoverForeground": "#acc1e5",
  "tab.inactiveBackground": "#17152b",
  "tab.inactiveForeground": "#a0b5d9",
  "tab.inactiveModifiedBorder": "#211f34",
  "tab.lastPinnedBorder": "#a686ff",
  "tab.unfocusedActiveBorder": "#211f34",
  "tab.unfocusedActiveForeground": "#a8bee4",
  "tab.unfocusedActiveModifiedBorder": "#211f34",
  "tab.unfocusedHoverForeground": "#a8bee4",
  "tab.unfocusedInactiveForeground": "#a0b5d9",
  "tab.unfocusedInactiveModifiedBorder": "#333145",
  "terminal.ansiBlack": "#141325",
  "terminal.ansiBlue": "#66a9ff",
  "terminal.ansiBrightBlack": "#939bc4",
  "terminal.ansiBrightBlue": "#75b2ff",
  "terminal.ansiBrightCyan": "#5fdcf2",
  "terminal.ansiBrightGreen": "#67b677",
  "terminal.ansiBrightMagenta": "#af92ff",
  "terminal.ansiBrightRed": "#cf1a65",
  "terminal.ansiBrightWhite": "#acc1e5",
  "terminal.ansiBrightYellow": "#e9d875",
  "terminal.ansiCyan": "#5fdcf2",
  "terminal.ansiGreen": "#79d68c",
  "terminal.ansiMagenta": "#af92ff",
  "terminal.ansiRed": "#f31f77",
  "terminal.ansiWhite": "#a8bee4",
  "terminal.ansiYellow": "#e6d466",
  "terminal.background": "#18162c",
  "terminal.foreground": "#acc1e5",
  "terminal.selectionBackground": "#5790d94d",
  "terminalCursor.background": "#2f2d41",
  "terminalCursor.foreground": "#acc1e5",
  "textBlockQuote.background": "#18162c",
  "textCodeBlock.background": "#18162c",
  "textLink.activeForeground": "#91c1ff",
  "textLink.foreground": "#75b2ff",
  "textPreformat.foreground": "#a8bee4",
  "textSeparator.foreground": "#3b394c",
  "titleBar.activeBackground": "#18162c",
  "titleBar.activeForeground": "#a0b5d9",
  "titleBar.border": "#1d1b30",
  "titleBar.inactiveBackground": "#17152b",
  "titleBar.inactiveForeground": "#606d82",
  "toolbar.activeBackground": "#2f2d41",
  "toolbar.hoverBackground": "#2f2d41",
  "tree.indentGuidesStroke": "#2a293d",
  "walkThrough.embeddedEditorBackground": "#18162c",
  "widget.shadow": "#0000004d",
  "window.activeBorder": "#141325",
  "window.inactiveBorder": "#141325",
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme semantic token colors snapshot 1`] = `
{
  "boolean": {
    "foreground": "#f31f77",
  },
  "class": {
    "fontStyle": "bold",
    "foreground": "#e6d466",
  },
  "class.component": {
    "fontStyle": "bold",
    "foreground": "#e6d466",
  },
  "constructor": {
    "fontStyle": "bold",
    "foreground": "#e6d466",
  },
  "decorator": {
    "fontStyle": "italic",
    "foreground": "#4dd8f0",
  },
  "function": {
    "foreground": "#66a9ff",
  },
  "function.declaration": {
    "fontStyle": "bold",
    "foreground": "#66a9ff",
  },
  "function.defaultLibrary": {
    "foreground": "#4dd8f0",
  },
  "interface.component": {
    "fontStyle": "bold",
    "foreground": "#e6d466",
  },
  "macro": {
    "fontStyle": "bold",
    "foreground": "#a686ff",
  },
  "method": {
    "foreground": "#66a9ff",
  },
  "method.declaration": {
    "fontStyle": "bold",
    "foreground": "#66a9ff",
  },
  "namespace": {
    "foreground": "#66a9ff",
  },
  "number": {
    "foreground": "#ce7a2b",
  },
  "parameter": {
    "foreground": "#66a9ff",
  },
  "parameter.readonly": {
    "fontStyle": "italic",
    "foreground": "#66a9ff",
  },
  "property": {
    "foreground": "#4dd8f0",
  },
  "property.readonly": {
    "fontStyle": "italic",
    "foreground": "#4dd8f0",
  },
  "readonly": {
    "fontStyle": "italic",
    "foreground": "#4dd8f0",
  },
  "static": {
    "fontStyle": "italic",
    "foreground": "#66a9ff",
  },
  "string": {
    "foreground": "#79d68c",
  },
  "type": {
    "fontStyle": "bold",
    "foreground": "#af92ff",
  },
  "variable": {
    "foreground": "#acc1e5",
  },
  "variable.defaultLibrary": {
    "foreground": "#4dd8f0",
  },
  "variable.readonly": {
    "fontStyle": "italic",
    "foreground": "#66a9ff",
  },
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme snapshot 1`] = `
{
  "colors": {
    "activityBar.activeBackground": "#1b1a2c",
    "activityBar.activeBorder": "#66a9ff",
    "activityBar.background": "#141325",
    "activityBar.border": "#191829",
    "activityBar.foreground": "#a0b5d9",
    "activityBar.inactiveForeground": "#515b6f",
    "activityBarBadge.background": "#007acc",
    "activityBarBadge.foreground": "#ffffff",
    "activityBarTop.foreground": "#a8bee4",
    "activityBarTop.inactiveForeground": "#a0b5d9",
    "badge.background": "#007acc",
    "badge.foreground": "#ffffff",
    "breadcrumb.activeSelectionForeground": "#a686ff",
    "breadcrumb.background": "#18162c",
    "breadcrumb.focusForeground": "#acc1e5",
    "breadcrumb.foreground": "#a0b5d9",
    "breadcrumbPicker.background": "#18162b",
    "button.background": "#5790d9",
    "button.foreground": "#000000",
    "button.hoverBackground": "#5c98e4",
    "button.secondaryBackground": "#3e5182",
    "charts.blue": "#66a9ff",
    "charts.foreground": "#acc1e5",
    "charts.green": "#66a9ff",
    "charts.lines": "#18162c",
    "charts.orange": "#ce7a2b",
    "charts.purple": "#8d72d9",
    "charts.red": "#f31f77",
    "charts.yellow": "#e6d466",
    "chat.avatarBackground": "#5790d9",
    "chat.avatarForeground": "#acc1e5",
    "chat.requestBorder": "#2f2d41",
    "chat.slashCommandBackground": "#141325",
    "chat.slashCommandForeground": "#66a9ff",
    "checkbox.background": "#18162c",
    "checkbox.border": "#283356",
    "checkbox.foreground": "#acc1e5",
    "debugConsole.errorForeground": "#cf1a65",
    "debugConsole.infoForeground": "#a8bee4",
    "debugConsole.sourceForeground": "#a8bee4",
    "debugConsole.warningForeground": "#c4b457",
    "debugConsoleInputIcon.foreground": "#4de0d8",
    "debugExceptionWidget.background": "#141325",
    "debugExceptionWidget.border": "#cf1a65",
    "debugIcon.breakpointDisabledForeground": "#2f2d41",
    "debugIcon.breakpointForeground": "#cf1a65",
    "debugIcon.breakpointUnverifiedForeground": "#cf1a65",
    "debugTokenExpression.boolean": "#ce7a2b",
    "debugTokenExpression.error": "#cf1a65",
    "debugTokenExpression.name": "#5fdcf2",
    "debugTokenExpression.number": "#ce7a2b",
    "debugTokenExpression.string": "#79d68c",
    "debugTokenExpression.value": "#acc1e5",
    "debugToolBar.background": "#141325",
    "debugView.stateLabelBackground": "#141325",
    "debugView.stateLabelForeground": "#a8bee4",
    "debugView.valueChangedHighlight": "#5790d9ab",
    "descriptionForeground": "#a8bee4",
    "diffEditor.diagonalFill": "#2a293d",
    "diffEditor.insertedLineBackground": "#67b67720",
    "diffEditor.insertedTextBackground": "#67b67720",
    "diffEditor.removedLineBackground": "#cf1a6521",
    "diffEditor.removedTextBackground": "#cf1a6521",
    "diffEditor.unchangedCodeBackground": "#26243966",
    "diffEditorGutter.insertedLineBackground": "#67b67726",
    "diffEditorGutter.removedLineBackground": "#cf1a6521",
    "diffEditorOverview.insertedForeground": "#67b67726",
    "diffEditorOverview.removedForeground": "#cf1a6521",
    "disabledForeground": "#939bc4",
    "dropdown.background": "#18162c",
    "dropdown.foreground": "#a8bee4",
    "dropdown.listBackground": "#18162c",
    "editor.background": "#1d1b30",
    "editor.findMatchBackground": "#5790d933",
    "editor.findMatchBorder": "#e6d46680",
    "editor.findMatchHighlightBackground": "#5790d933",
    "editor.findRangeHighlightBackground": "#66a9ff33",
    "editor.focusedStackFrameHighlightBackground": "#4de0d820",
    "editor.foldBackground": "#14132533",
    "editor.foreground": "#acc1e5",
    "editor.inactiveSelectionBackground": "#66a9ff26",
    "editor.lineHighlightBackground": "#2f2d41",
    "editor.rangeHighlightBackground": "#4de0d833",
    "editor.selectionBackground": "#66a9ff33",
    "editor.selectionHighlightBackground": "#66a9ff40",
    "editor.stackFrameHighlightBackground": "#c4b45720",
    "editor.wordHighlightBackground": "#66a9ff40",
    "editor.wordHighlightStrongBackground": "#66a9ff4d",
    "editorBracketHighlight.foreground1": "#d38740",
    "editorBracketHighlight.foreground2": "#d896e3",
    "editorBracketHighlight.foreground3": "#f43585",
    "editorBracketHighlight.foreground4": "#e9d875",
    "editorBracketHighlight.foreground5": "#d896e3",
    "editorBracketHighlight.foreground6": "#99cc40",
    "editorBracketHighlight.unexpectedBracket.foreground": "#f31f77",
    "editorBracketMatch.background": "#18162c",
    "editorBracketMatch.border": "#1d1b30",
    "editorBracketPairGuide.activeBackground1": "#d38740",
    "editorBracketPairGuide.activeBackground2": "#d896e3",
    "editorBracketPairGuide.activeBackground3": "#f43585",
    "editorBracketPairGuide.activeBackground4": "#e9d875",
    "editorBracketPairGuide.activeBackground5": "#d896e3",
    "editorBracketPairGuide.activeBackground6": "#99cc40",
    "editorCodeLens.foreground": "#a0b5d9",
    "editorCursor.foreground": "#acc1e5",
    "editorError.foreground": "#f31f77",
    "editorGhostText.foreground": "#7d84a7",
    "editorGroup.border": "#333145",
    "editorGroup.dropBackground": "#333145",
    "editorGroupHeader.border": "#1d1b30",
    "editorGroupHeader.noTabsBackground": "#18162c",
    "editorGroupHeader.tabsBackground": "#18162c",
    "editorGroupHeader.tabsBorder": "#141325",
    "editorGutter.addedBackground": "#233e4e",
    "editorGutter.deletedBackground": "#5a1943",
    "editorGutter.modifiedBackground": "#434561",
    "editorHint.foreground": "#4dd8f0",
    "editorHoverWidget.background": "#32334b",
    "editorHoverWidget.border": "#2c3b61",
    "editorIndentGuide.activeBackground1": "#363751",
    "editorIndentGuide.background1": "#242237",
    "editorInfo.foreground": "#4dd8f0",
    "editorInlayHint.foreground": "#939bc4",
    "editorLightBulb.foreground": "#e6d466",
    "editorLightBulbAutoFix.foreground": "#e6d466",
    "editorLineNumber.activeForeground": "#787ea1",
    "editorLineNumber.foreground": "#3b3d57",
    "editorLink.activeForeground": "#acc1e5",
    "editorMarkerNavigation.background": "#18162c",
    "editorOverviewRuler.addedForeground": "#233e4e",
    "editorOverviewRuler.border": "#333145",
    "editorOverviewRuler.bracketMatchForeground": "#141325",
    "editorOverviewRuler.deletedForeground": "#5a1943",
    "editorOverviewRuler.errorForeground": "#f31f77",
    "editorOverviewRuler.findMatchForeground": "#9ea5ca66",
    "editorOverviewRuler.infoForeground": "#5addc1",
    "editorOverviewRuler.modifiedForeground": "#434561",
    "editorOverviewRuler.rangeHighlightForeground": "#4de0d84d",
    "editorOverviewRuler.selectionHighlightForeground": "#66a9ff40",
    "editorOverviewRuler.warningForeground": "#e6d466",
    "editorOverviewRuler.wordHighlightForeground": "#66a9ff59",
    "editorOverviewRuler.wordHighlightStrongForeground": "#66a9ff73",
    "editorPane.background": "#2f2d41",
    "editorRuler.foreground": "#141325",
    "editorStickyScrollHover.background": "#66a9ff1a",
    "editorSuggestWidget.background": "#141325",
    "editorSuggestWidget.border": "#283356",
    "editorSuggestWidget.highlightForeground": "#9ea5ca",
    "editorSuggestWidget.selectedBackground": "#66a9ff4d",
    "editorWarning.foreground": "#e6d466",
    "editorWhitespace.foreground": "#1485d0",
    "editorWidget.background": "#27273e",
    "editorWidget.border": "#283356",
    "editorWidget.foreground": "#acc1e5",
    "editorWidget.resizeBorder": "#283356",
    "errorForeground": "#a0b5d9",
    "extensionBadge.remoteBackground": "#5790d9",
    "extensionBadge.remoteForeground": "#000000",
    "extensionButton.prominentBackground": "#5790d9",
    "extensionButton.prominentForeground": "#000000",
    "extensionButton.prominentHoverBackground": "#5c98e4",
    "focusBorder": "#007acc4d",
    "foreground": "#acc1e5",
    "gitDecoration.addedResourceForeground": "#41beb8",
    "gitDecoration.conflictingResourceForeground": "#e6d466cc",
    "gitDecoration.deletedResourceForeground": "#cf1a65",
    "gitDecoration.ignoredResourceForeground": "#a0b5d9",
    "gitDecoration.modifiedResourceForeground": "#75b2ff",
    "gitDecoration.renamedResourceForeground": "#41beb8",
    "gitDecoration.stageDeletedResourceForeground": "#cf1a65",
    "gitDecoration.stageModifiedResourceForeground": "#75b2ff",
    "gitDecoration.untrackedResourceForeground": "#41beb8",
    "gitlens.gutterBackgroundColor": "#18162c",
    "gitlens.gutterForegroundColor": "#a8bee4",
    "gitlens.gutterUncommittedForegroundColor": "#66a9ff",
    "gitlens.trailingLineForegroundColor": "#7d84a7",
    "icon.foreground": "#acc1e5",
    "inlineChat.foreground": "#acc1e5",
    "inlineChatDiff.inserted": "#67b67740",
    "inlineChatDiff.removed": "#cf1a6542",
    "inlineChatInput.background": "#2f2d41",
    "input.background": "#141325",
    "input.border": "#283356",
    "input.foreground": "#acc1e5",
    "input.placeholderForeground": "#a8bee48a",
    "inputOption.activeBackground": "#7d84a745",
    "inputOption.activeForeground": "#acc1e5",
    "list.activeSelectionBackground": "#66a9ff33",
    "list.activeSelectionForeground": "#acc1e5",
    "list.deemphasizedForeground": "#a8bee4",
    "list.dropBackground": "#2f2d41",
    "list.errorForeground": "#f31f77",
    "list.focusBackground": "#66a9ff40",
    "list.focusForeground": "#acc1e5",
    "list.highlightForeground": "#acc1e5",
    "list.hoverBackground": "#66a9ff1a",
    "list.hoverForeground": "#acc1e5",
    "list.inactiveSelectionBackground": "#66a9ff26",
    "list.inactiveSelectionForeground": "#acc1e5",
    "list.invalidItemForeground": "#d5953d",
    "list.warningForeground": "#c4b457",
    "listFilterWidget.background": "#141325",
    "listFilterWidget.noMatchesOutline": "#cf1a65",
    "listFilterWidget.outline": "#5790d9",
    "menu.background": "#18162c",
    "menu.border": "#283356",
    "menu.foreground": "#a8bee4",
    "menu.selectionBackground": "#66a9ff40",
    "menu.selectionForeground": "#cddaef",
    "menu.separatorBackground": "#262439",
    "menubar.selectionBackground": "#66a9ff33",
    "menubar.selectionBorder": "#211f34",
    "menubar.selectionForeground": "#acc1e5",
    "merge.currentContentBackground": "#41beb845",
    "merge.currentHeaderBackground": "#67b67726",
    "merge.incomingContentBackground": "#5790d945",
    "merge.incomingHeaderBackground": "#5790d9ab",
    "mergeEditor.change.background": "#67b67726",
    "mergeEditor.change.word.background": "#67b67740",
    "mergeEditor.conflict.handled.minimapOverViewRuler": "#41beb8",
    "mergeEditor.conflict.handledFocused.border": "#67b67766",
    "mergeEditor.conflict.handledUnfocused.border": "#67b67726",
    "mergeEditor.conflict.unhandled.minimapOverViewRuler": "#e6d466",
    "mergeEditor.conflict.unhandledFocused.border": "#e6d466b0",
    "mergeEditor.conflict.unhandledUnfocused.border": "#e6d46687",
    "minimapGutter.addedBackground": "#254957",
    "minimapGutter.deletedBackground": "#701a4a",
    "minimapGutter.modifiedBackground": "#494b69",
    "multiDiffEditor.border": "#2f2d41",
    "multiDiffEditor.headerBackground": "#2f2d41",
    "notebook.cellBorderColor": "#141325",
    "notebook.cellEditorBackground": "#18162c",
    "notebook.cellStatusBarItemHoverBackground": "#66a9ff26",
    "notebook.editorBackground": "#2f2d41",
    "notebook.focusedCellBorder": "#283356",
    "notificationCenterHeader.background": "#18162c",
    "notificationLink.foreground": "#75b2ff",
    "notifications.background": "#18162c",
    "notificationsErrorIcon.foreground": "#cf1a65",
    "notificationsInfoIcon.foreground": "#4dd8f0",
    "notificationsWarningIcon.foreground": "#e6d466",
    "panel.background": "#18162b",
    "panel.border": "#283356",
    "panelInput.border": "#1d1b30",
    "panelStickyScroll.background": "#2f2d41",
    "panelTitle.activeBorder": "#66a9ff",
    "panelTitle.activeForeground": "#a0b5d9",
    "panelTitle.inactiveForeground": "#8091ae",
    "peekView.border": "#283356",
    "peekViewEditor.background": "#18162c",
    "peekViewEditor.matchHighlightBackground": "#9ea5ca66",
    "peekViewResult.background": "#18162c",
    "peekViewResult.fileForeground": "#a8bee4",
    "peekViewResult.lineForeground": "#acc1e5",
    "peekViewResult.matchHighlightBackground": "#9ea5ca66",
    "peekViewResult.selectionBackground": "#66a9ff4d",
    "peekViewResult.selectionForeground": "#acc1e5",
    "peekViewTitle.background": "#141325",
    "peekViewTitleDescription.foreground": "#a8bee4",
    "peekViewTitleLabel.foreground": "#acc1e5",
    "pickerGroup.border": "#283356",
    "pickerGroup.foreground": "#acc1e5",
    "progressBar.background": "#5790d9",
    "quickInput.background": "#18162c",
    "sash.hoverBorder": "#333145",
    "scmGraph.foreground1": "#66a9ff",
    "scmGraph.foreground2": "#a686ff",
    "scmGraph.foreground3": "#4dd8f0",
    "scmGraph.foreground4": "#d48ae0",
    "scmGraph.foreground5": "#d48ae0",
    "scmGraph.historyItemBaseRefColor": "#4dd8f0",
    "scmGraph.historyItemHoverAdditionsForeground": "#67b677",
    "scmGraph.historyItemHoverDefaultLabelForeground": "#acc1e5",
    "scmGraph.historyItemHoverDeletionsForeground": "#f31f77",
    "scmGraph.historyItemHoverLabelForeground": "#141325",
    "scmGraph.historyItemRefColor": "#66a9ff",
    "scmGraph.historyItemRemoteRefColor": "#a686ff",
    "scrollbar.shadow": "#00000033",
    "scrollbarSlider.activeBackground": "#66a9ff4d",
    "scrollbarSlider.background": "#a8bee40a",
    "scrollbarSlider.hoverBackground": "#66a9ff33",
    "selection.background": "#66a9ff33",
    "settings.headerForeground": "#9ea5ca",
    "sideBar.background": "#191829",
    "sideBar.border": "#1d1c2e",
    "sideBar.dropBackground": "#2f2d41",
    "sideBar.foreground": "#a8bee4",
    "sideBarSectionHeader.background": "#1d1c2e",
    "sideBarSectionHeader.border": "#222132",
    "sideBarSectionHeader.foreground": "#a0b5d9",
    "sideBarTitle.foreground": "#a0b5d9",
    "statusBar.background": "#141325",
    "statusBar.border": "#191829",
    "statusBar.debuggingBackground": "#51437f",
    "statusBar.debuggingForeground": "#a0b5d9",
    "statusBar.focusBorder": "#66a9ff",
    "statusBar.foreground": "#a0b5d9",
    "statusBar.noFolderBackground": "#141325",
    "statusBarItem.activeBackground": "#66a9ff40",
    "statusBarItem.focusBorder": "#66a9ff",
    "statusBarItem.hoverBackground": "#66a9ff26",
    "statusBarItem.prominentBackground": "#66a9ff40",
    "statusBarItem.prominentHoverBackground": "#66a9ff4d",
    "statusBarItem.remoteBackground": "#66a9ff40",
    "statusBarItem.remoteHoverForeground": "#b9cbe9",
    "tab.activeBackground": "#18162c",
    "tab.activeBorderTop": "#a686ff",
    "tab.activeForeground": "#acc1e5",
    "tab.activeModifiedBorder": "#a686ff",
    "tab.border": "#333145",
    "tab.hoverForeground": "#acc1e5",
    "tab.inactiveBackground": "#17152b",
    "tab.inactiveForeground": "#a0b5d9",
    "tab.inactiveModifiedBorder": "#211f34",
    "tab.lastPinnedBorder": "#a686ff",
    "tab.unfocusedActiveBorder": "#211f34",
    "tab.unfocusedActiveForeground": "#a8bee4",
    "tab.unfocusedActiveModifiedBorder": "#211f34",
    "tab.unfocusedHoverForeground": "#a8bee4",
    "tab.unfocusedInactiveForeground": "#a0b5d9",
    "tab.unfocusedInactiveModifiedBorder": "#333145",
    "terminal.ansiBlack": "#141325",
    "terminal.ansiBlue": "#66a9ff",
    "terminal.ansiBrightBlack": "#939bc4",
    "terminal.ansiBrightBlue": "#75b2ff",
    "terminal.ansiBrightCyan": "#5fdcf2",
    "terminal.ansiBrightGreen": "#67b677",
    "terminal.ansiBrightMagenta": "#af92ff",
    "terminal.ansiBrightRed": "#cf1a65",
    "terminal.ansiBrightWhite": "#acc1e5",
    "terminal.ansiBrightYellow": "#e9d875",
    "terminal.ansiCyan": "#5fdcf2",
    "terminal.ansiGreen": "#79d68c",
    "terminal.ansiMagenta": "#af92ff",
    "terminal.ansiRed": "#f31f77",
    "terminal.ansiWhite": "#a8bee4",
    "terminal.ansiYellow": "#e6d466",
    "terminal.background": "#18162c",
    "terminal.foreground": "#acc1e5",
    "terminal.selectionBackground": "#5790d94d",
    "terminalCursor.background": "#2f2d41",
    "terminalCursor.foreground": "#acc1e5",
    "textBlockQuote.background": "#18162c",
    "textCodeBlock.background": "#18162c",
    "textLink.activeForeground": "#91c1ff",
    "textLink.foreground": "#75b2ff",
    "textPreformat.foreground": "#a8bee4",
    "textSeparator.foreground": "#3b394c",
    "titleBar.activeBackground": "#18162c",
    "titleBar.activeForeground": "#a0b5d9",
    "titleBar.border": "#1d1b30",
    "titleBar.inactiveBackground": "#17152b",
    "titleBar.inactiveForeground": "#606d82",
    "toolbar.activeBackground": "#2f2d41",
    "toolbar.hoverBackground": "#2f2d41",
    "tree.indentGuidesStroke": "#2a293d",
    "walkThrough.embeddedEditorBackground": "#18162c",
    "widget.shadow": "#0000004d",
    "window.activeBorder": "#141325",
    "window.inactiveBorder": "#141325",
  },
  "name": "Tokyo Modern",
  "semanticHighlighting": true,
  "semanticTokenColors": {
    "boolean": {
      "foreground": "#f31f77",
    },
    "class": {
      "fontStyle": "bold",
      "foreground": "#e6d466",
    },
    "class.component": {
      "fontStyle": "bold",
      "foreground": "#e6d466",
    },
    "constructor": {
      "fontStyle": "bold",
      "foreground": "#e6d466",
    },
    "decorator": {
      "fontStyle": "italic",
      "foreground": "#4dd8f0",
    },
    "function": {
      "foreground": "#66a9ff",
    },
    "function.declaration": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
    "function.defaultLibrary": {
      "foreground": "#4dd8f0",
    },
    "interface.component": {
      "fontStyle": "bold",
      "foreground": "#e6d466",
    },
    "macro": {
      "fontStyle": "bold",
      "foreground": "#a686ff",
    },
    "method": {
      "foreground": "#66a9ff",
    },
    "method.declaration": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
    "namespace": {
      "foreground": "#66a9ff",
    },
    "number": {
      "foreground": "#ce7a2b",
    },
    "parameter": {
      "foreground": "#66a9ff",
    },
    "parameter.readonly": {
      "fontStyle": "italic",
      "foreground": "#66a9ff",
    },
    "property": {
      "foreground": "#4dd8f0",
    },
    "property.readonly": {
      "fontStyle": "italic",
      "foreground": "#4dd8f0",
    },
    "readonly": {
      "fontStyle": "italic",
      "foreground": "#4dd8f0",
    },
    "static": {
      "fontStyle": "italic",
      "foreground": "#66a9ff",
    },
    "string": {
      "foreground": "#79d68c",
    },
    "type": {
      "fontStyle": "bold",
      "foreground": "#af92ff",
    },
    "variable": {
      "foreground": "#acc1e5",
    },
    "variable.defaultLibrary": {
      "foreground": "#4dd8f0",
    },
    "variable.readonly": {
      "fontStyle": "italic",
      "foreground": "#66a9ff",
    },
  },
  "tokenColors": [
    {
      "name": "Comment",
      "scope": [
        "comment",
        "punctuation.definition.comment",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#939bc4",
      },
    },
    {
      "name": "Number, Boolean, Undefined, Null",
      "scope": [
        "constant.numeric",
        "constant.language",
        "variable.other.constant",
      ],
      "settings": {
        "foreground": "#ce7a2b",
      },
    },
    {
      "name": "String, Symbols",
      "scope": [
        "string",
        "constant.other.symbol",
        "constant.other.key",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Colors",
      "scope": [
        "constant.other.color",
      ],
      "settings": {
        "foreground": "#acc1e5",
      },
    },
    {
      "name": "Invalid",
      "scope": [
        "invalid",
      ],
      "settings": {
        "foreground": "#f31f77",
      },
    },
    {
      "name": "Storage Type",
      "scope": "storage.type",
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Storage - modifier, var, const, let",
      "scope": [
        "storage.modifier",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Interpolation, PHP tags",
      "scope": [
        "punctuation.definition.template-expression",
        "punctuation.section.embedded",
      ],
      "settings": {
        "foreground": "#75b2ff",
      },
    },
    {
      "name": "Operators",
      "scope": [
        "keyword.operator",
      ],
      "settings": {
        "foreground": "#f31f77",
      },
    },
    {
      "name": "Punctuation",
      "scope": [
        "punctuation",
      ],
      "settings": {
        "foreground": "#a8bee4",
      },
    },
    {
      "name": "Template & Misc",
      "scope": [
        "keyword.other",
        "punctuation.definition.keyword",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Import, Export, From, Default",
      "scope": [
        "keyword.control.import",
        "keyword.control.export",
        "keyword.control.default",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Keyword",
      "scope": [
        "keyword",
        "keyword.control",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Keyword Operator Logical",
      "scope": [
        "keyword.operator.logical",
        "keyword.operator.bitwise",
        "keyword.operator.comparison",
        "keyword.operator.relational",
      ],
      "settings": {
        "foreground": "#f31f77",
      },
    },
    {
      "name": "Tag",
      "scope": "entity.name.tag",
      "settings": {
        "foreground": "#d48ae0",
      },
    },
    {
      "name": "Tag Punctuation",
      "scope": [
        "punctuation.definition.tag",
      ],
      "settings": {
        "foreground": "#a8bee4",
      },
    },
    {
      "name": "Variables",
      "scope": [
        "variable",
        "support.variable",
      ],
      "settings": {
        "foreground": "#acc1e5",
      },
    },
    {
      "name": "Function Arguments",
      "scope": [
        "variable.parameter",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Object Key",
      "scope": [
        "meta.object-literal.key",
        "entity.name.type.hcl",
      ],
      "settings": {
        "foreground": "#7a7aff",
      },
    },
    {
      "name": "Object Property",
      "scope": [
        "variable.other.property",
        "support.variable.property",
      ],
      "settings": {
        "foreground": "#4dd8f0",
      },
    },
    {
      "name": "Methods",
      "scope": [
        "entity.name.method",
        "variable.function.constructor",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Function Definition",
      "scope": [
        "entity.name.function",
        "variable.function",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Constant, Tag Attribute",
      "scope": [
        "constant.character",
        "constant.escape",
      ],
      "settings": {
        "foreground": "#ce7a2b",
      },
    },
    {
      "name": "Inherited Class",
      "scope": "entity.other.inherited-class",
      "settings": {
        "foreground": "#af92ff",
      },
    },
    {
      "name": "Class, Support, DOM, etc",
      "scope": [
        "support.class",
        "support.type",
        "support.function",
      ],
      "settings": {
        "foreground": "#e6d466",
      },
    },
    {
      "name": "Class Name",
      "scope": "entity.name",
      "settings": {
        "foreground": "#e6d466",
      },
    },
    {
      "name": "CSS Property Name",
      "scope": [
        "support.type.property-name",
      ],
      "settings": {
        "foreground": "#4dd8f0",
      },
    },
    {
      "name": "CSS Tag",
      "scope": [
        "entity.name.tag.css",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "CSS ID",
      "scope": [
        "entity.other.attribute-name.id",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "CSS Class",
      "scope": [
        "entity.other.attribute-name.class",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "CSS Unit",
      "scope": [
        "keyword.other.unit",
      ],
      "settings": {
        "foreground": "#ce7a2b",
      },
    },
    {
      "name": "Markup Bold",
      "scope": [
        "markup.bold",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#ce7a2b",
      },
    },
    {
      "name": "Markup Italic",
      "scope": [
        "markup.italic",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#10b981",
      },
    },
    {
      "name": "Markup Underline",
      "scope": [
        "markup.underline",
      ],
      "settings": {
        "fontStyle": "underline",
      },
    },
    {
      "name": "Markup Heading",
      "scope": [
        "markup.heading",
        "entity.name.section",
        "markup.heading.setext",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Markup Quote",
      "scope": [
        "markup.quote",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Markup List",
      "scope": [
        "markup.list",
      ],
      "settings": {
        "foreground": "#a686ff",
      },
    },
    {
      "name": "Markup Link",
      "scope": [
        "markup.underline.link",
        "string.other.link",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Markdown Heading",
      "scope": [
        "markup.heading.markdown",
        "markup.heading.setext.markdown",
        "entity.name.section.markdown",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Markdown Link",
      "scope": [
        "string.other.link.title.markdown",
        "string.other.link.description.markdown",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "Markdown Code",
      "scope": [
        "markup.inline.raw.markdown",
        "markup.fenced_code.block.markdown",
      ],
      "settings": {
        "foreground": "#79d68c",
      },
    },
    {
      "name": "Markdown Bold",
      "scope": [
        "markup.bold.markdown",
      ],
      "settings": {
        "fontStyle": "bold",
        "foreground": "#ce7a2b",
      },
    },
    {
      "name": "Markdown Italic",
      "scope": [
        "markup.italic.markdown",
      ],
      "settings": {
        "fontStyle": "italic",
        "foreground": "#a686ff",
      },
    },
    {
      "name": "JSX Component",
      "scope": [
        "support.class.component",
      ],
      "settings": {
        "foreground": "#e1c25a",
      },
    },
    {
      "name": "JSX Tag",
      "scope": [
        "entity.name.tag.tsx",
        "entity.name.tag.jsx",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "TypeScript Type",
      "scope": [
        "entity.name.type.ts",
        "entity.name.type.tsx",
      ],
      "settings": {
        "foreground": "#af92ff",
      },
    },
    {
      "name": "TypeScript Interface",
      "scope": [
        "entity.name.type.interface",
      ],
      "settings": {
        "foreground": "#af92ff",
      },
    },
    {
      "name": "GraphQL Field",
      "scope": [
        "variable.graphql",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "JSON Key",
      "scope": [
        "support.type.property-name.json",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
    {
      "name": "YAML Key",
      "scope": [
        "entity.name.tag.yaml",
      ],
      "settings": {
        "foreground": "#66a9ff",
      },
    },
  ],
  "type": "dark",
}
`;

exports[`Snapshot Tests - Generated Theme > should match the expected theme token colors snapshot 1`] = `
[
  {
    "name": "Comment",
    "scope": [
      "comment",
      "punctuation.definition.comment",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#939bc4",
    },
  },
  {
    "name": "Number, Boolean, Undefined, Null",
    "scope": [
      "constant.numeric",
      "constant.language",
      "variable.other.constant",
    ],
    "settings": {
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "String, Symbols",
    "scope": [
      "string",
      "constant.other.symbol",
      "constant.other.key",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Colors",
    "scope": [
      "constant.other.color",
    ],
    "settings": {
      "foreground": "#acc1e5",
    },
  },
  {
    "name": "Invalid",
    "scope": [
      "invalid",
    ],
    "settings": {
      "foreground": "#f31f77",
    },
  },
  {
    "name": "Storage Type",
    "scope": "storage.type",
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Storage - modifier, var, const, let",
    "scope": [
      "storage.modifier",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Interpolation, PHP tags",
    "scope": [
      "punctuation.definition.template-expression",
      "punctuation.section.embedded",
    ],
    "settings": {
      "foreground": "#75b2ff",
    },
  },
  {
    "name": "Operators",
    "scope": [
      "keyword.operator",
    ],
    "settings": {
      "foreground": "#f31f77",
    },
  },
  {
    "name": "Punctuation",
    "scope": [
      "punctuation",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Template & Misc",
    "scope": [
      "keyword.other",
      "punctuation.definition.keyword",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Import, Export, From, Default",
    "scope": [
      "keyword.control.import",
      "keyword.control.export",
      "keyword.control.default",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Keyword",
    "scope": [
      "keyword",
      "keyword.control",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Keyword Operator Logical",
    "scope": [
      "keyword.operator.logical",
      "keyword.operator.bitwise",
      "keyword.operator.comparison",
      "keyword.operator.relational",
    ],
    "settings": {
      "foreground": "#f31f77",
    },
  },
  {
    "name": "Tag",
    "scope": "entity.name.tag",
    "settings": {
      "foreground": "#d48ae0",
    },
  },
  {
    "name": "Tag Punctuation",
    "scope": [
      "punctuation.definition.tag",
    ],
    "settings": {
      "foreground": "#a8bee4",
    },
  },
  {
    "name": "Variables",
    "scope": [
      "variable",
      "support.variable",
    ],
    "settings": {
      "foreground": "#acc1e5",
    },
  },
  {
    "name": "Function Arguments",
    "scope": [
      "variable.parameter",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Object Key",
    "scope": [
      "meta.object-literal.key",
      "entity.name.type.hcl",
    ],
    "settings": {
      "foreground": "#7a7aff",
    },
  },
  {
    "name": "Object Property",
    "scope": [
      "variable.other.property",
      "support.variable.property",
    ],
    "settings": {
      "foreground": "#4dd8f0",
    },
  },
  {
    "name": "Methods",
    "scope": [
      "entity.name.method",
      "variable.function.constructor",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Function Definition",
    "scope": [
      "entity.name.function",
      "variable.function",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Constant, Tag Attribute",
    "scope": [
      "constant.character",
      "constant.escape",
    ],
    "settings": {
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Inherited Class",
    "scope": "entity.other.inherited-class",
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "Class, Support, DOM, etc",
    "scope": [
      "support.class",
      "support.type",
      "support.function",
    ],
    "settings": {
      "foreground": "#e6d466",
    },
  },
  {
    "name": "Class Name",
    "scope": "entity.name",
    "settings": {
      "foreground": "#e6d466",
    },
  },
  {
    "name": "CSS Property Name",
    "scope": [
      "support.type.property-name",
    ],
    "settings": {
      "foreground": "#4dd8f0",
    },
  },
  {
    "name": "CSS Tag",
    "scope": [
      "entity.name.tag.css",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "CSS ID",
    "scope": [
      "entity.other.attribute-name.id",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "CSS Class",
    "scope": [
      "entity.other.attribute-name.class",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "CSS Unit",
    "scope": [
      "keyword.other.unit",
    ],
    "settings": {
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Markup Bold",
    "scope": [
      "markup.bold",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Markup Italic",
    "scope": [
      "markup.italic",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#10b981",
    },
  },
  {
    "name": "Markup Underline",
    "scope": [
      "markup.underline",
    ],
    "settings": {
      "fontStyle": "underline",
    },
  },
  {
    "name": "Markup Heading",
    "scope": [
      "markup.heading",
      "entity.name.section",
      "markup.heading.setext",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markup Quote",
    "scope": [
      "markup.quote",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markup List",
    "scope": [
      "markup.list",
    ],
    "settings": {
      "foreground": "#a686ff",
    },
  },
  {
    "name": "Markup Link",
    "scope": [
      "markup.underline.link",
      "string.other.link",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markdown Heading",
    "scope": [
      "markup.heading.markdown",
      "markup.heading.setext.markdown",
      "entity.name.section.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markdown Link",
    "scope": [
      "string.other.link.title.markdown",
      "string.other.link.description.markdown",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "Markdown Code",
    "scope": [
      "markup.inline.raw.markdown",
      "markup.fenced_code.block.markdown",
    ],
    "settings": {
      "foreground": "#79d68c",
    },
  },
  {
    "name": "Markdown Bold",
    "scope": [
      "markup.bold.markdown",
    ],
    "settings": {
      "fontStyle": "bold",
      "foreground": "#ce7a2b",
    },
  },
  {
    "name": "Markdown Italic",
    "scope": [
      "markup.italic.markdown",
    ],
    "settings": {
      "fontStyle": "italic",
      "foreground": "#a686ff",
    },
  },
  {
    "name": "JSX Component",
    "scope": [
      "support.class.component",
    ],
    "settings": {
      "foreground": "#e1c25a",
    },
  },
  {
    "name": "JSX Tag",
    "scope": [
      "entity.name.tag.tsx",
      "entity.name.tag.jsx",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "TypeScript Type",
    "scope": [
      "entity.name.type.ts",
      "entity.name.type.tsx",
    ],
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "TypeScript Interface",
    "scope": [
      "entity.name.type.interface",
    ],
    "settings": {
      "foreground": "#af92ff",
    },
  },
  {
    "name": "GraphQL Field",
    "scope": [
      "variable.graphql",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "JSON Key",
    "scope": [
      "support.type.property-name.json",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
  {
    "name": "YAML Key",
    "scope": [
      "entity.name.tag.yaml",
    ],
    "settings": {
      "foreground": "#66a9ff",
    },
  },
]
`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 1`] = `"Tokyo Modern"`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 2`] = `"dark"`;

exports[`Snapshot Tests - Generated Theme > should match theme name and configuration 3`] = `true`;
